# VirtualCapturing

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  error_code.h  main.cpp  recording_task.h  recroding_task.cpp  tapplication.cpp  tapplication.h  tobject.cpp  tobject.h  virtual_camera.cpp  virtual_camera.h  write2file_task.cpp  write2file_task.h
tests/: CMakeLists.txt  virtual_cam_unittest.cpp
